# STL_Mock

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cc  main.cpp
doc/iterator/: allocator.md
include/: my_vector.h
include/container/: my_vector.h  vector.h
include/iterator/: allocator.h  my_allocator.h
src/: CMakeLists.txt
src/SequenceContainers/deque/: deque_iterator.h  stl_deque.h
src/SequenceContainers/list/: list_iterator.h  stl_list.h  stl_list_node.h
src/SequenceContainers/stack/: mystack.h
src/SequenceContainers/vector/: stl_vector.h
src/container/: my_vector.cc  vector.cc
src/iterator/: my_allocator.cc
stl_mock/: CMakeLists.txt
stl_mock/allocator/: alloc.cc  alloc.h  allocator.h  construct.h
stl_mock/iterator/: iterator.h
stl_mock/utils/: type_traits.h
test/: CMakeLists.txt
test/sequenceContainers/: vector-test.cpp
